fixing image not showing

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -37,7 +37,6 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
-html,
 body {
   height: 100%;
   width: 100%;
